src/obj-x86_64-pc-linux-gnu/xpcom/build/Services.h

class nsIChromeRegistry;
/**
 * NOTE: Don't call this method directly, instead call mozilla::services::GetChromeRegistry.
 * It is used to expose XPCOM services to rust code. The return value is already addrefed.
 */
nsIChromeRegistry* XPCOMService_GetChromeRegistry();
class nsIToolkitChromeRegistry;
/**
 * NOTE: Don't call this method directly, instead call mozilla::services::GetToolkitChromeRegistry.
 * It is used to expose XPCOM services to rust code. The return value is already addrefed.
 */
nsIToolkitChromeRegistry* XPCOMService_GetToolkitChromeRegistry();
class nsIXULChromeRegistry;
/**
 * NOTE: Don't call this method directly, instead call mozilla::services::GetXULChromeRegistry.
 * It is used to expose XPCOM services to rust code. The return value is already addrefed.
 */
nsIXULChromeRegistry* XPCOMService_GetXULChromeRegistry();
class nsIProperties;
/**
 * NOTE: Don't call this method directly, instead call mozilla::services::GetDirectoryService.
 * It is used to expose XPCOM services to rust code. The return value is already addrefed.
 */
nsIProperties* XPCOMService_GetDirectoryService();
class nsIIOService;
/**
 * NOTE: Don't call this method directly, instead call mozilla::services::GetIOService.
 * It is used to expose XPCOM services to rust code. The return value is already addrefed.
 */
nsIIOService* XPCOMService_GetIOService();
class nsIObserverService;
/**
 * NOTE: Don't call this method directly, instead call mozilla::services::GetObserverService.
 * It is used to expose XPCOM services to rust code. The return value is already addrefed.
 */
nsIObserverService* XPCOMService_GetObserverService();
class nsIStringBundleService;
/**
 * NOTE: Don't call this method directly, instead call mozilla::services::GetStringBundleService.
 * It is used to expose XPCOM services to rust code. The return value is already addrefed.
 */
nsIStringBundleService* XPCOMService_GetStringBundleService();
class nsIPermissionManager;
/**
 * NOTE: Don't call this method directly, instead call mozilla::services::GetPermissionManager.
 * It is used to expose XPCOM services to rust code. The return value is already addrefed.
 */
nsIPermissionManager* XPCOMService_GetPermissionManager();
class nsIPrefService;
/**
 * NOTE: Don't call this method directly, instead call mozilla::services::GetPrefService.
 * It is used to expose XPCOM services to rust code. The return value is already addrefed.
 */
nsIPrefService* XPCOMService_GetPrefService();
class nsIServiceWorkerManager;
/**
 * NOTE: Don't call this method directly, instead call mozilla::services::GetServiceWorkerManager.
 * It is used to expose XPCOM services to rust code. The return value is already addrefed.
 */
nsIServiceWorkerManager* XPCOMService_GetServiceWorkerManager();
class nsIAsyncShutdownService;
/**
 * NOTE: Don't call this method directly, instead call mozilla::services::GetAsyncShutdownService.
 * It is used to expose XPCOM services to rust code. The return value is already addrefed.
 */
nsIAsyncShutdownService* XPCOMService_GetAsyncShutdownService();
class nsIUUIDGenerator;
/**
 * NOTE: Don't call this method directly, instead call mozilla::services::GetUUIDGenerator.
 * It is used to expose XPCOM services to rust code. The return value is already addrefed.
 */
nsIUUIDGenerator* XPCOMService_GetUUIDGenerator();
class nsIGfxInfo;
/**
 * NOTE: Don't call this method directly, instead call mozilla::services::GetGfxInfo.
 * It is used to expose XPCOM services to rust code. The return value is already addrefed.
 */
nsIGfxInfo* XPCOMService_GetGfxInfo();
class nsISocketTransportService;
/**
 * NOTE: Don't call this method directly, instead call mozilla::services::GetSocketTransportService.
 * It is used to expose XPCOM services to rust code. The return value is already addrefed.
 */
nsISocketTransportService* XPCOMService_GetSocketTransportService();
class nsIStreamTransportService;
/**
 * NOTE: Don't call this method directly, instead call mozilla::services::GetStreamTransportService.
 * It is used to expose XPCOM services to rust code. The return value is already addrefed.
 */
nsIStreamTransportService* XPCOMService_GetStreamTransportService();
class nsICacheStorageService;
/**
 * NOTE: Don't call this method directly, instead call mozilla::services::GetCacheStorageService.
 * It is used to expose XPCOM services to rust code. The return value is already addrefed.
 */
nsICacheStorageService* XPCOMService_GetCacheStorageService();
class nsIURIClassifier;
/**
 * NOTE: Don't call this method directly, instead call mozilla::services::GetURIClassifier.
 * It is used to expose XPCOM services to rust code. The return value is already addrefed.
 */
nsIURIClassifier* XPCOMService_GetURIClassifier();
class nsIHttpActivityDistributor;
/**
 * NOTE: Don't call this method directly, instead call mozilla::services::GetHttpActivityDistributor.
 * It is used to expose XPCOM services to rust code. The return value is already addrefed.
 */
nsIHttpActivityDistributor* XPCOMService_GetHttpActivityDistributor();
class mozIThirdPartyUtil;
/**
 * NOTE: Don't call this method directly, instead call mozilla::services::GetThirdPartyUtil.
 * It is used to expose XPCOM services to rust code. The return value is already addrefed.
 */
mozIThirdPartyUtil* XPCOMService_GetThirdPartyUtil();
class nsIURIFixup;
/**
 * NOTE: Don't call this method directly, instead call mozilla::services::GetURIFixup.
 * It is used to expose XPCOM services to rust code. The return value is already addrefed.
 */
nsIURIFixup* XPCOMService_GetURIFixup();
class nsIBits;
/**
 * NOTE: Don't call this method directly, instead call mozilla::services::GetBits.
 * It is used to expose XPCOM services to rust code. The return value is already addrefed.
 */
nsIBits* XPCOMService_GetBits();
class nsIXULRuntime;
/**
 * NOTE: Don't call this method directly, instead call mozilla::services::GetXULRuntime.
 * It is used to expose XPCOM services to rust code. The return value is already addrefed.
 */
nsIXULRuntime* XPCOMService_GetXULRuntime();
class nsIRemoteAgent;
/**
 * NOTE: Don't call this method directly, instead call mozilla::services::GetRemoteAgent.
 * It is used to expose XPCOM services to rust code. The return value is already addrefed.
 */
nsIRemoteAgent* XPCOMService_GetRemoteAgent();